# Project-mini

./: .gitignore  README.md
Blogging-Platform-API/: README.md  pyproject.toml
Expense-Tracker/: README.md  app.py  data.csv  main.py
Expense-Tracker-API/: Dockerfile  docker-compose.yaml
Expense-Tracker-API/app/: databases.py  main.py  schemas.py  security.py
Expense-Tracker-API/app/migrations/versions/: 6d3d90ce93f2_create_user_table.py
Expense-Tracker-API/app/repository/: posts.py  users.py
Expense-Tracker-API/app/routers/: auth.py  post.py
Expense-Tracker/src/: __init__.py  command.py  service.py  utill.py
Task-Tracker/: task_cli.py
Todo-List-API/: pyproject.toml
Todo-List-API/app/: __init__.py  main.py  schema.py  schemas.py  security.py
Todo-List-API/app/alembic/: env.py
Todo-List-API/app/repository/: posts.py  users.py
Todo-List-API/app/routers/: auth.py  post.py
